--- a/ .github/workflows/main.yml
+++ b/ .github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v2
         with:
-          app-name: testing_the_hosting_app
+          app-name: testing-azure
           package: .
 
    
